// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer snapshot test (fixed) 1`] = `
<DocumentFragment>
  .c0 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  height: 35px;
  padding: 9px 20px 10px;
  border-top: 1px solid #D4D8DD;
  background-color: #EFF1F4;
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <footer
      class="c1"
    >
      Footer
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Footer snapshot test 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  height: 35px;
  padding: 9px 20px 10px;
  border-top: 1px solid #D4D8DD;
  background-color: #EFF1F4;
  box-sizing: border-box;
}

<footer
    class="c0"
  >
    Footer
  </footer>
</DocumentFragment>
`;
